Update openmetada deployment

--- a/openmetadata/.env.example
+++ b/openmetadata/.env.example
@@ -78,7 +78,7 @@ ELASTICSEARCH_INDEX_MAPPING_LANG=EN
 #eventMonitoringConfiguration
 EVENT_MONITOR=prometheus
 EVENT_MONITOR_BATCH_SIZE=10
-EVENT_MONITOR_PATH_PATTERN=["/api/v1/tables/*", "/api/v1/health-check"]
+EVENT_MONITOR_PATH_PATTERN='["/api/v1/tables/*", "/api/v1/health-check"]'
 EVENT_MONITOR_LATENCY=[]
 
 #pipelineServiceClientConfiguration
