--- a/openmetadata/.env.example
+++ b/openmetadata/.env.example
@@ -1,23 +1,23 @@
 # MySQL
-MYSQL_ROOT_PASSWORD=mysqlpassword
+MYSQL_ROOT_PASSWORD="mysqlpassword"
 
 # Airflow
 AIRFLOW__API__AUTH_BACKENDS="airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session"
-AIRFLOW__CORE__EXECUTOR=LocalExecutor
+AIRFLOW__CORE__EXECUTOR="LocalExecutor"
 AIRFLOW__OPENMETADATA_AIRFLOW_APIS__DAG_GENERATED_CONFIGS="/opt/airflow/dag_generated_configs"
-DB_HOST=mysql
-DB_PORT=3306
-AIRFLOW_DB=airflow_db
-DB_SCHEME=mysql+pymysql
-DB_USER=airflow_user
-DB_PASSWORD=airflow_pass
+DB_HOST="mysql"
+DB_PORT="3306"
+AIRFLOW_DB="airflow_db"
+DB_SCHEME="mysql+pymysql"
+DB_USER="airflow_user"
+DB_PASSWORD="airflow_pass"
 
 # OM Server
-OPENMETADATA_CLUSTER_NAME=openmetadata
-SERVER_PORT=8585
-SERVER_ADMIN_PORT=8586
-LOG_LEVEL=INFO
-OPENMETADATA_DEBUG=false
+OPENMETADATA_CLUSTER_NAME="openmetadata"
+SERVER_PORT="8585"
+SERVER_ADMIN_PORT="8586"
+LOG_LEVEL="INFO"
+OPENMETADATA_DEBUG="false"
 
 # OpenMetadata Server Authentication Configuration
 AUTHORIZER_CLASS_NAME=org.openmetadata.service.security.DefaultAuthorizer
@@ -26,16 +26,16 @@ AUTHORIZER_ADMIN_PRINCIPALS=[admin]
 AUTHORIZER_ALLOWED_REGISTRATION_DOMAIN=["all"]
 AUTHORIZER_INGESTION_PRINCIPALS=[ingestion-bot]
 AUTHORIZER_PRINCIPAL_DOMAIN="openmetadata.org"
-AUTHORIZER_ENFORCE_PRINCIPAL_DOMAIN=false
-AUTHORIZER_ENABLE_SECURE_SOCKET=false
-AUTHENTICATION_PROVIDER=basic
+AUTHORIZER_ENFORCE_PRINCIPAL_DOMAIN="false"
+AUTHORIZER_ENABLE_SECURE_SOCKET="false"
+AUTHENTICATION_PROVIDER="basic"
 CUSTOM_OIDC_AUTHENTICATION_PROVIDER_NAME=""
 AUTHENTICATION_PUBLIC_KEYS=[http://localhost:8585/api/v1/system/config/jwks]
 AUTHENTICATION_AUTHORITY=https://accounts.google.com
 AUTHENTICATION_CLIENT_ID=""
 AUTHENTICATION_CALLBACK_URL=""
 AUTHENTICATION_JWT_PRINCIPAL_CLAIMS=[email,preferred_username,sub]
-AUTHENTICATION_ENABLE_SELF_SIGNUP=true
+AUTHENTICATION_ENABLE_SELF_SIGNUP="true"
 
 # JWT Configuration
 RSA_PUBLIC_KEY_FILE_PATH="./conf/public_key.der"
@@ -44,26 +44,25 @@ JWT_ISSUER="open-metadata.org"
 JWT_KEY_ID="Gb389a-9f76-gdjs-a92j-0242bk94356"
 
 # OpenMetadata Server Pipeline Service Client Configuration
-PIPELINE_SERVICE_CLIENT_ENDPOINT=http://ingestion:8080
-PIPELINE_SERVICE_CLIENT_HEALTH_CHECK_INTERVAL=300
-SERVER_HOST_API_URL=http://openmetadata-server:8585/api
+PIPELINE_SERVICE_CLIENT_ENDPOINT="http://ingestion:8080"
+SERVER_HOST_API_URL="http://openmetadata-server:8585/api"
 PIPELINE_SERVICE_CLIENT_VERIFY_SSL="no-ssl"
 PIPELINE_SERVICE_CLIENT_SSL_CERT_PATH=""
 
 # Database configuration for MySQL
-DB_DRIVER_CLASS=com.mysql.cj.jdbc.Driver
-DB_SCHEME=mysql
-DB_USE_SSL=false
-DB_USER=openmetadata_user
-DB_USER_PASSWORD=openmetadata_password
-DB_HOST=mysql
-DB_PORT=3306
-OM_DATABASE=openmetadata_db
+DB_DRIVER_CLASS="com.mysql.cj.jdbc.Driver"
+DB_SCHEME="mysql"
+DB_USE_SSL="false"
+DB_USER="openmetadata_user"
+DB_USER_PASSWORD="openmetadata_password"
+DB_HOST="mysql"
+DB_PORT="3306"
+OM_DATABASE="openmetadata_db"
 
 # ElasticSearch Configurations
-ELASTICSEARCH_HOST=elasticsearch
-ELASTICSEARCH_PORT=9200
-ELASTICSEARCH_SCHEME=http
+ELASTICSEARCH_HOST="elasticsearch"
+ELASTICSEARCH_PORT="9200"
+ELASTICSEARCH_SCHEME="http"
 ELASTICSEARCH_USER=""
 ELASTICSEARCH_PASSWORD=""
 SEARCH_TYPE="elasticsearch"
@@ -73,30 +72,30 @@ ELASTICSEARCH_CONNECTION_TIMEOUT_SECS=5
 ELASTICSEARCH_SOCKET_TIMEOUT_SECS=60
 ELASTICSEARCH_KEEP_ALIVE_TIMEOUT_SECS=600
 ELASTICSEARCH_BATCH_SIZE=10
-ELASTICSEARCH_INDEX_MAPPING_LANG=EN
+ELASTICSEARCH_INDEX_MAPPING_LANG="EN"
 
 #eventMonitoringConfiguration
-EVENT_MONITOR=prometheus
+EVENT_MONITOR="prometheus"
 EVENT_MONITOR_BATCH_SIZE=10
 EVENT_MONITOR_PATH_PATTERN='["/api/v1/tables/*", "/api/v1/health-check"]'
 EVENT_MONITOR_LATENCY=[]
 
 #pipelineServiceClientConfiguration
 PIPELINE_SERVICE_CLIENT_CLASS_NAME="org.openmetadata.service.clients.pipeline.airflow.AirflowRESTClient"
-PIPELINE_SERVICE_IP_INFO_ENABLED=false
+PIPELINE_SERVICE_IP_INFO_ENABLED="false"
 PIPELINE_SERVICE_CLIENT_HOST_IP=""
 PIPELINE_SERVICE_CLIENT_SECRETS_MANAGER_LOADER="noop"
 
 #airflow parameters
-AIRFLOW_USERNAME=admin
-AIRFLOW_PASSWORD=admin
+AIRFLOW_USERNAME="admin"
+AIRFLOW_PASSWORD="admin"
 AIRFLOW_TIMEOUT=10
 AIRFLOW_TRUST_STORE_PATH=""
 AIRFLOW_TRUST_STORE_PASSWORD=""
 FERNET_KEY="jJ/9sz0g0OHxsfxOoSfdFdmk3ysNmPRnH3TUAbz3IHA="
 
 #secretsManagerConfiguration
-SECRET_MANAGER=noop
+SECRET_MANAGER="noop"
 
 #parameters:
 OM_SM_REGION=""
@@ -106,7 +105,7 @@ OM_SM_ACCESS_KEY=""
 #email configuration:
 OM_EMAIL_ENTITY="OpenMetadata"
 OM_SUPPORT_URL="https://slack.open-metadata.org"
-AUTHORIZER_ENABLE_SMTP=false
+AUTHORIZER_ENABLE_SMTP="false"
 OPENMETADATA_SERVER_URL=""
 OPENMETADATA_SMTP_SENDER_MAIL=""
 SMTP_SERVER_ENDPOINT=""
@@ -133,4 +132,21 @@ OM_LOGIN_ACCESS_BLOCK_TIME=600
 OM_JWT_EXPIRY_TIME=3600
 
 # Mask passwords values in UI
-MASK_PASSWORDS_API=false
+MASK_PASSWORDS_API="false"
+
+#WebConfiguration
+WEB_CONF_URI_PATH="/api"
+WEB_CONF_HSTS_ENABLED="false"
+WEB_CONF_HSTS_MAX_AGE="365 days"
+WEB_CONF_HSTS_INCLUDE_SUBDOMAINS="true"
+WEB_CONF_HSTS_PRELOAD="true"
+WEB_CONF_FRAME_OPTION_ENABLED="false"
+WEB_CONF_FRAME_OPTION="SAMEORIGIN"
+WEB_CONF_FRAME_ORIGIN=""
+WEB_CONF_CONTENT_TYPE_OPTIONS_ENABLED="false"
+WEB_CONF_XSS_PROTECTION_ENABLED="false"
+WEB_CONF_XSS_PROTECTION_ON="true"
+WEB_CONF_XSS_PROTECTION_BLOCK="true"
+WEB_CONF_XSS_CSP_ENABLED="false"
+WEB_CONF_XSS_CSP_POLICY="default-src 'self'"
+WEB_CONF_XSS_CSP_REPORT_ONLY_POLICY=""
